# openenv-autoscale-rl

./: .gitignore  README.md  build_sft_dataset.py  client.py  colab_train_rl.py  demo_backend.py  environment.py  eval_policy.py  eval_sft.py  generate_traces.py  hpa_policy.py  models.py  plot_results.py  prompts.py  requirements.txt  rollout.py  run_baseline.py  run_simulator_demo.py  server.py  simulator.py  smoke_test_openenv.py  test_baseline.py  test_simulator.py  train_rl.py  train_sft.py
demo-ui/: index.html  package-lock.json  package.json  vite.config.js
demo-ui/src/: App.jsx  styles.css
envs/autoscale_env/: __init__.py  client.py  environment.py  models.py  openenv.yaml  pyproject.toml
envs/autoscale_env/server/: __init__.py  app.py  autoscale_environment.py
notebooks/: unsloth_openenv_autoscale_grpo.ipynb
